Sun Jan 26 01:17:00 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * AUTHORS:
        * NEWS:
        * README:

          Updates to get ready for release.

Tue Jan 14 16:08:32 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/ReactorSynch.cpp:

          Coverity issue #1154613: explicitly reset the raw pointer copy
          of the event handler.  We are letting the EventHandler_var
          actually perform the delete, but be safe(r) here and reset the
          raw (narrowed) pointer as well.

Thu Jan  9 18:12:54 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Thrasher/ParticipantTask.h:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:

          Reduce the scope of Entity creation serialization to only the
          participant.

Thu Jan  9 17:46:36 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/Thrasher/ParticipantTask.h:
        * tests/DCPS/Thrasher/ParticipantTask.cpp:
        * tests/DCPS/Thrasher/Publisher.cpp:
        * tests/DCPS/Thrasher/Subscriber.cpp:
        * tests/DCPS/Thrasher/run_test.pl:

          Serialize Entity creation for the test threads.

Thu Jan  9 16:30:31 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/LargeSample/run_test.pl:

          Enable Builtin Topics.  This stabilizes the test on some
          platforms.

Thu Jan  9 00:18:43 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/TCPListenerTest/run_test.pl:

          Specify correct command line argument for zero copy.

Wed Jan  8 23:41:25 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/tcp/TcpSendStrategy.cpp:

          Include ThreadSynch.h for when inlining is disabled.

Wed Jan  8 19:54:37 UTC 2014  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/ReactorSynch.inl:
        * dds/DCPS/transport/framework/ReactorSynch.cpp: