@@ -1,6 +1,6 @@
-This is OpenDDS version 3.4.1, released Wed Feb 27 16:29:08 UTC 2013.
+This is OpenDDS version 3.5, released Mon Jan 27 19:10:01 UTC 2014.
 
-    OpenDDS VERSION: 3.4.1
+    OpenDDS VERSION: 3.5
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
