@@ -1,3 +1,7 @@
+Mon Jan 27 19:10:01 UTC 2014  Mike Martinez  <martinezm@ociweb.com>
+
+        * OpenDDS version 3.5 released.
+
 Sun Jan 26 01:17:00 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * AUTHORS:
